# swingQuant

./: .env.example  .gitignore  AGENTS.md  README.md  REDESIGN_BRIEF.md  Spec.md  config.yaml  production_strategies.json  production_strategy.json  pyproject.toml  sq
reports/: analyst_snapshots.md  candidates.md  exit_analysis.md  factor_tearsheet_energy_10d.md  factor_tearsheet_information_technology_10d.md  factor_tearsheet_information_technology_5d.md  portfolio_rotation.md  portfolio_rotation_equity.csv  portfolio_rotation_trades.csv  portfolio_rotation_walk_forward.md  portfolio_rotation_walk_forward_equity.csv  portfolio_rotation_walk_forward_friction.md  portfolio_rotation_walk_forward_friction_equity.csv  portfolio_rotation_walk_forward_friction_trades.csv  portfolio_rotation_walk_forward_quarterly_returns.csv  portfolio_rotation_walk_forward_rolling_windows.csv  portfolio_rotation_walk_forward_trades.csv  rsi_exit_bakeoff.md  scan_analysis.md  scan_performance.md  shortlist.md  shortlist_allocation_analysis.md  shortlist_bakeoff.md  shortlist_model.md  shortlist_model_live_predictions.csv  shortlist_scoreboard.md  shortlist_sector_reactivation.md  shortlist_tune.md  sleeve_research.md  slot_attribution.md  subindustry_attribution.md  universe_analysis.md
src/: __init__.py  cli.py  settings.py
tests/: test_alpha_research.py  test_analyst_data.py  test_cli.py  test_db_manager.py  test_emailer.py  test_evaluate_promote_trade.py  test_exit_analysis.py  test_factor_tearsheet.py  test_portfolio_rotation.py  test_positions.py  test_positions_render.py  test_quote.py  (+21 more)
(+61 files in other folders)
