[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "swingquant"
version = "0.1.0"
description = "SwingQuant CLI for sync and research workflows."
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.1.0",
  "pandas>=2.2.0",
  "polars>=1.8.0",
  "PyYAML>=6.0.0",
  "yfinance>=0.2.0",
  "xgboost>=2.0.0",
]

[project.scripts]
sq = "src.cli:main"

[tool.setuptools]
packages = [
  "src",
  "src.utils",
  "src.sync",
  "src.research",
  "src.sweep",
  "src.evaluate",
  "src.promote",
  "src.trade",
  "src.scan",
  "src.monitor",
]
